# space-mission-planner

./: .gitignore  CMakeLists.txt  README.MD
data/: input.txt
include/: fuel_estimator.h  launch_window_calculator.h  mission_planner.h  planetary_data.h  propulsion_system.h  slingshot_optimizer.h  trajectory_calculator.h
src/: fuel_estimator.cpp  launch_window_calculator.cpp  main.cpp  mission_planner.cpp  planetary_data.cpp  propulsion_system.cpp  trajectory_calculator.cpp
